`Added API endpoints for genres, refactore novel column and updated documentation`
